<resources>
    <string name="app_name">Breathe App</string>
    <string name="title_activity_home">Breathe App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Breathe App</string>
    <string name="nav_header_subtitle">Atemübungen durchführen</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Atemübungen</string>
    <string name="menu_gallery">Control Pause Tracker</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="uebung_home">Home</string>
    <string name="uebung_editor">Uebung Editor</string>
    <string name="fragment_editor">Fragment Editor</string>
    <string name="delete_fragment_dialog_title">Fragment Löschen</string>
    <string name="delete_fragment_dialog_content">Möchten sie dieses Fragment löschen?</string>
    <string name="delete_fragment_dialog_positive_button_label">Loeschen</string>
    <string name="delete_fragment_success_message">Fragment geloescht</string>
    <string name="delete_fragment_dialog_negative_button_label">Abbrechen</string>
    <string name="delete_uebung_dialog_title">Uebung Löschen</string>
    <string name="delete_uebung_dialog_content">Möchten sie diese Uebung löschen?</string>
    <string name="delete_uebung_dialog_positive_button_label">Loeschen</string>
    <string name="delete_uebung_positive_button_message">Uebung geloescht</string>
    <string name="delete_uebung_negative_button_label">Abbrechen</string>
    <string name="delete_all_uebung_dialog_content">Wollen sie alle Uebungen unwiderruflich loeschen?</string>
    <string name="delete_all_uebung_dialog_positive_button_label">Alles löschen</string>
    <string name="delete_all_uebung_dialog_positive_message">Alle Uebungen geloescht</string>
    <string name="use_time">Zeit benutzen?</string>
    <string name="uebung_title">Titel</string>
    <string name="uebung_description">Beschreibung</string>
    <string name="button_edit">Edit</string>
    <string name="animation_fragment_label">Uebung</string>
    <string-array name="animations_array">
        <item>Select Animation</item>
        <item>ProgressBar</item>
        <item>Polygon</item>
    </string-array>
    <string name="timer_default">00:00</string>
    <string name="start">start</string>
    <string name="pause">pause</string>
    <string name="reset">reset</string>
    <string name="priority_edit_text">Priority</string>
    <string name="fragment_titel_dummy">fragment titel!!</string>
    <string name="animation_titel_dummy">titel!!</string>
    <string name="hold_prompt">HOLD!</string>
    <string name="new_fragment_button_label">new\nfragment</string>
    <string name="edit_text_seconds_hint">sec</string>
    <string name="colon_symbol">:</string>
    <string name="edit_text_minutes_hint">min</string>
    <string name="empty_hint">"                "</string>
    <string name="priority">Priority:</string>
    <string name="delete_all_uebungen_title">Alle Übungen Löschen?</string>
</resources>