<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.datenbankefuerprojekt.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_home_add_edit_uebung"
            app:destination="@id/nav_home_add_edit_uebung"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_home_add_edit_uebung"
        android:name="com.example.datenbankefuerprojekt.ui.home.AddEditUebungFragment"
        android:label="@string/uebung_editor"
        tools:layout="@layout/fragment_add_edit_uebung"
        >
        <action
            android:id="@+id/action_nav_home_add_edit_uebung_to_nav_home"
            app:destination="@id/nav_home" />
        <action
            android:id="@+id/action_nav_home_add_edit_uebung_to_nav_home_add_edit_fragment"
            app:destination="@id/nav_home_add_edit_fragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_home_add_edit_fragment"
        android:name="com.example.datenbankefuerprojekt.ui.home.AddEditFragmentFragment"
        android:label="@string/fragment_editor"
        tools:layout="@layout/fragment_add_edit_fragment"
        >
        <action
            android:id="@+id/action_nav_home_add_edit_fragment_to_nav_home_add_edit_uebung"
            app:destination="@id/nav_home_add_edit_uebung" />
        <action
            android:id="@+id/action_nav_home_add_edit_fragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.datenbankefuerprojekt.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.datenbankefuerprojekt.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" >
    </fragment>
</navigation>