<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".animation.ProgressBarFragment"
    android:background="@drawable/ic_breathe_lightbackground">


    <TextView
        android:id="@+id/text_view_animation_title_prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="titel!!"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_view_fragment_title_prog"/>

    <TextView
        android:id="@+id/text_view_fragment_title_prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="fragment titel!!"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_animation_title_prog"
        app:layout_constraintBottom_toTopOf="@id/text_view_timer_prog"/>

    <TextView
        android:id="@+id/text_view_timer_prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_default"
        android:textSize="50sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_fragment_title_prog"
        app:layout_constraintBottom_toTopOf="@id/pbar"/>

    <ProgressBar
        android:id="@+id/pbar"
        android:layout_width="30dip"
        android:layout_height="400dip"
        android:progress="0"
        android:max="200"
        style="@style/Widget.ProgressBar.Vertical"
        app:layout_constraintTop_toBottomOf="@id/text_view_animation_title_prog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/text_view_hold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HOLD!"
        android:visibility="invisible"
        tools:visibility="visible"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/pbar"/>

    <Button
        android:id="@+id/button_start_pause_prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintTop_toBottomOf="@+id/pbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/reset_button_prog"
        app:layout_constraintBottom_toBottomOf="parent"/>



    <Button
        android:id="@+id/reset_button_prog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintTop_toBottomOf="@id/pbar"
        app:layout_constraintLeft_toRightOf="@id/button_start_pause_prog"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:enabled="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>